--- a/Homework №5.ipynb
+++ b/Homework №5.ipynb
@@ -245,19 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('24', '33'), ('21', '30'), ('5', '15'), ('12', '36'), ('34', '41'), ('1', '16'), ('17', '35'), ('23', '43'), ('20', '37'), ('6', '8'), ('4', '22'), ('7', '26'), ('13', '32'), ('2', '14'), ('28', '45'), ('3', '10')}\n"
+      "{('36', '32'), ('43', '20'), ('34', '41'), ('1', '21'), ('5', '31'), ('45', '39'), ('33', '10'), ('26', '16'), ('17', '40'), ('30', '8'), ('25', '15'), ('24', '4'), ('12', '22'), ('13', '42'), ('2', '14'), ('6', '38'), ('3', '23'), ('35', '28'), ('7', '44')}\n"
      ]
     }
    ],
    "source": [
-    "print(approximation.min_maximal_matching(G_component))"
+    "print(nx.max_weight_matching(G_component))"
    ]
   },
   {
